--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,36 @@ html,body{
 }
 .header {
     width : 100%;
-    height : 80px ;
     background:#DE9B7E;
 }
-.toggle_btn{
-    display:none;
-    color : #DE9B7E;
-    font-size: 1.5rem;
-    font-weight: bold;
-} 
 .wall .wall-background{ 
     width : 100%; 
 }
-
+.wall .wall-title{
+    text-align: center ;
+    position : absolute ;
+    top : 100px ;
+    width: 100%;
+    height: 100px;
+    font-size : 1.5rem;
+} 
+.wall .wall-name{
+    text-align: center ;
+    position : absolute ;
+    top : 250px ;
+    width: 100%;
+    height: 100px;  
+    font-size : 2.5rem;
+    padding : 2px 45% ;
+    background-color:#F5DA98;
+    opacity : 0.4;
+}
+.toggle_btn{
+    display:none;
+    color : red; 
+    font-size: 1.5rem;
+    font-weight: bold;
+} 
 .readMore{
     color:#DE756D;
 }
@@ -36,19 +53,15 @@ html,body{
     display:flex;
     gap: 2 rem;
 }
-.navbar li{
-    width : 19% ;
+.navbar .navbar-item{
+    width : 20% ;
     border-right : 1px solid #CFDE7E ;
     height : 60px;
     line-height: 60px;
     font-size : 110%;
     display: inline-block;
-    margin-right: -4px ;
 }
-.navbar li:last-child {
-    border-right:none ;
-}
-.navbar li li{
+.navbar .product-item{
     border-right : none ;
     font-size : 0.9em;
 }
@@ -81,8 +94,9 @@ html,body{
     background-color: #DE756D;
 }
 .product-list{
+    background-color: #DE9B7E;
     position :absolute;
-    left :21.5%;
+    left :20%;
     display : none ;
     width : inherit ;
 }
@@ -93,9 +107,6 @@ html,body{
     display:inline ;
 }
 
-#main-menu{
-    display : flex ;
-}
 .footer{
     background-color: #F5DA98;
     height : 100px;
