--- a/css/form.css
+++ b/css/form.css
@@ -8,14 +8,49 @@
 }
 html,body{
     font-size: 120% ;
-    color :#DE9B7E;
-    background-color: #F8E5F0;
+    color :#629677;
+    background-color: #FAC8CD;
     text-align: center;
+}
+.wall {
+    position: relative;
+}
+.wall .wall-background{ 
+    width : 100%;
+}
+.wall .wall-title{
+    text-align: center ;
+    position : absolute ;
+    top : 20% ;
+    width: 100%;
+    font-size : 1.5rem;
+} 
+ .wall .wall-name{
+    position : absolute ;
+    top : 40% ;
+    width: 100%;
+    height: 100px;  
+    font-size : 2rem;
+    padding : 22px 30% ;
+    background-color:#FAC8CD;
+    opacity : 0.4;
+}
+.toggle_btn{
+    display:none;
+    color : #629677;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: right;
+    margin-right:30px;
+    cursor: pointer;
+}  
+#down {
+    display: none ;
 }
 input ,select, textarea {
     margin: 8px 0;
     padding: 12px 20px;
-    border: 2px solid #DE9B7E;
+    border: 2px solid #98B6B1;
     border-radius: 10px;
     outline: none;
     font-size: 20px;
@@ -24,68 +59,61 @@ input[type=text], input[type=email], input[type=submit], input[type=date],textar
     padding: 12px 20px;
     box-sizing: border-box;
     font-family: "Dancing Script" ;
-    color : #DE9B7E;
+    color : #98B6B1;
 }
 
 input[type=submit] { 
     width : 150px;
-    background-color: #DE9B7E;
+    background-color: #98B6B1;
     font-family:"Dancing Script";
     font-size: 100% ;
     color:white;
 }
-header img{ 
-    width : 100%; 
-}
-nav ul{
-    background-color: #F5DA98;
+
+.navbar {
+    background-color: #98B6B1;
     text-align: center ;
+    display:flex;
+    gap: 2 rem;
 }
-nav li{
-    width : 19% ;
-    border-right : 1px solid #CFDE7E ;
+.navbar .navbar-item{
+    width : 20% ;
+    border-right : 1px solid #629677 ;
     height : 60px;
     line-height: 60px;
     font-size : 110%;
     display: inline-block;
-    margin-right: -4px ;
 }
-nav li:last-child {
-    border-right:none ;
-}
-nav li li{
+.navbar .product-item{
     border-right : none ;
     font-size : 0.9em;
+    text-align:center ;
+    display:inline ;
 }
-nav a{
-    text-decoration: none ;
+.navbar a {
     color : #fff;
     display:block;
     padding-left: 15px ;
     transition: 0.5s;
 }
-nav a:hover {
-    background-color : #CFDE7E;
-    color : #DE9B7E;
+.navbar a:hover {
+    background-color : #629677;
+    color : #fff;
     cursor :default;
 }
-nav>ul.li{
-    text-align:center ;
-}
-nav > ul>li>a {
+.navbar  .product-links {
     padding-left :0 ;
+    display: block; 
+    color :#fff;
+    padding : 10px 25px ;
+    transition: 0.2s;
 }
-nav li ul {
+.product-list{
+    background-color: #98B6B1;
     position :absolute;
-    left : 19%;
+    left :20%;
     display : none ;
     width : inherit ;
-}
-nav li:hover ul{
-    display:inline-block ;
-}
-nav li ul li {
-    display:inline 
 }
 .main{
     padding: 100px;
@@ -94,7 +122,6 @@ nav li ul li {
     justify-content:center;
     align-items: center;
 }
-
 #contact, #order {
     margin-top: 50px;
     display: flex;
@@ -103,7 +130,7 @@ nav li ul li {
 }
 
 .order-group, .contact-group{
-    width: 800px ;
+    width: 90vh ;
     text-align: center;
     display: flex;
     margin-top:30px;
@@ -134,7 +161,7 @@ nav li ul li {
 #order-list-cake{
     margin: 8px 0;
     font-family: "Dancing Script" ;
-    color : #DE9B7E;
+    color : #D7BCC8;
 }
 .choose {
     display: flex;
@@ -153,27 +180,18 @@ nav li ul li {
     margin-left:12px;
 }
 #submit:hover{
-    background-color:#DE756D;
+    background-color:#629677;
 }
 #main-menu{
     display : flex ;
 }
-#toggle{
-    display:none;
-    background-color: #F5DA98;
-    color : #DE9B7E;
-    text-align: right;
-    padding: 10px;
-    font-size: 20px;
-    cursor:pointer;
+.footer{
+    background-color: #495D63;
+    height : 100px;
+    display: flex;
 }
-footer{
-    background-color: #F5DA98;
-    height : 20px;
-    display:flex;
-}
-footer p {
-    margin :auto;
-    color : #DE9B7E ;
+.footer-text {
+    margin:auto;
+    color : #98B6B1 ;
     font-size : 90% ;
-}
+} 
