--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,99 @@
 @media screen and (max-width:992px){
-    
+    .main{
+        padding : 0 2%;
+        transition : .2s ;
+    }
+    .order-group {
+        padding : 0;
+        margin : 0;
+    }
+    .contact-lable, .order-lable{
+        width: 20%;
+    }
 }
 @media screen and (max-width:768px) {
+    img {
+        width:90%;
+    }
+    .navbar {
+        position:absolute;
+        top : 25%;
+        right: 2%;
+        width: 40vh;
+        height: 35vh;
+        background-color: #98B6B1;
+        display: none;
+        flex-direction: column;
+        justify-content: flex-start;
+        border-radius: 10px ;
+        transition: all .50s ease;
+    }
+    .navbar a {
+        display: block;
+        margin: 12px 0 ;
+        padding: 0px 25px ;
+        transition: all .50s ease;
+    }
+    .product-list{
+        border : 1px solid #629677 ;
+        border-radius: 10px;
+        background-color: #98B6B1;
+    } 
+    .toggle_btn{
+        display:block; 
+        
+    }
+    .navbar .mobile-menu  {
+        right : 2%;
+    }
+    .order-group, .contact-group{
+        width: 50% ;
+    }
+    .navbar .navbar-item{
+        width : 100% ;
+    }
+    .open { 
+        display: block;
+    }
+    .product-list {
+        width: 70%;
+    }
+    .navbar .product-links{
+        padding : 0;
+        font-size: 1rem;
+    } 
+    #down {
+        display: inline-block ;
+    }
+    .wall .wall-title{ 
+        font-size: 1em;
+    }
+    .wall .wall-name{
+        height: 50px;
+        font-size: 1.5em;
+        top: 50%;
+        padding : 10px 30% ;
+        
+    }
 
 }
 @media screen and ( min-width:768px) and (max-width:992px) {
+    img {
+        width:60%;
+    }
+    .order-group, .contact-group{
+        width: 70% ;
+    }
+    
+.navbar .product-links{
+    padding : 0;
+    font-size: 1rem;
+}
+}
 
+@media screen and ( min-width:768px) {
+    .navbar li:hover ul{
+        display:inline-block ;
+    }   
+    
 }
