--- a/css/style.css
+++ b/css/style.css
@@ -8,54 +8,83 @@
 }
 html,body{
     font-size: 120% ;
-    color :#DE9B7E;
-    background-color: #F8E5F0;
+    color :#629677;
+    background-color: #FAC8CD;
     text-align: center;
 }
-.header {
-    width : 100%;
-    background:#DE9B7E;
+.wall {
+    position: relative;
 }
 .wall .wall-background{ 
-    width : 100%; 
+    width : 100%;
 }
 .wall .wall-title{
     text-align: center ;
     position : absolute ;
-    top : 100px ;
+    top : 20% ;
     width: 100%;
-    height: 100px;
     font-size : 1.5rem;
 } 
-.wall .wall-name{
-    text-align: center ;
+ .wall .wall-name{
     position : absolute ;
-    top : 250px ;
+    top : 40% ;
     width: 100%;
     height: 100px;  
-    font-size : 2.5rem;
-    padding : 2px 45% ;
-    background-color:#F5DA98;
+    font-size : 2rem;
+    padding : 22px 30% ;
+    background-color:#FAC8CD;
     opacity : 0.4;
-}
+}    
+
 .toggle_btn{
     display:none;
-    color : red; 
+    color : #629677;
     font-size: 1.5rem;
     font-weight: bold;
-} 
+    text-align: right;
+    margin-right:30px;
+    cursor: pointer;
+}  
+#down {
+    display: none ;
+}
 .readMore{
-    color:#DE756D;
+    color:#98B6B1;
+    text-decoration:underline;
+}
+.main .main-card{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.main .main-card_title {
+    margin-bottom: 20px;
+}
+#main-title{
+    margin-top:30px;
+    margin-bottom : 30px;
+}
+
+.main-content p{
+    margin:30px;
+}
+div.center {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+}
+img {
+    width:30%;
+    display:block;
 }
 .navbar {
-    background-color: #F5DA98;
+    background-color: #98B6B1;
     text-align: center ;
     display:flex;
     gap: 2 rem;
 }
 .navbar .navbar-item{
     width : 20% ;
-    border-right : 1px solid #CFDE7E ;
+    border-right : 1px solid #629677 ;
     height : 60px;
     line-height: 60px;
     font-size : 110%;
@@ -64,71 +93,42 @@ html,body{
 .navbar .product-item{
     border-right : none ;
     font-size : 0.9em;
+    text-align:center ;
+    display:inline ;
 }
-.navbar a{
+.navbar a {
     color : #fff;
     display:block;
     padding-left: 15px ;
     transition: 0.5s;
 }
 .navbar a:hover {
-    background-color : #CFDE7E;
-    color : #DE9B7E;
+    background-color : #629677;
+    color : #fff;
     cursor :default;
 }
-.navbar>ul.li{
-    text-align:center ;
-}
-.navbar  ul li a {
+.navbar  .product-links {
     padding-left :0 ;
+    border-bottom : 1px solid #629677 ;
     display: block; 
-    color :#CFDE7E;
-    font-size: 20px;
+    color :#fff;
     padding : 10px 25px ;
-    border-radius: 50px;
     transition: 0.2s;
-    margin : 0 5px;
-}
-.product-item:hover{
-    color :#CFDE7E;
-    background-color: #DE756D;
 }
 .product-list{
-    background-color: #DE9B7E;
+    background-color: #98B6B1;
     position :absolute;
     left :20%;
     display : none ;
     width : inherit ;
 }
-.navbar li:hover ul{
-    display:inline-block ;
-}
-.navbar li ul li {
-    display:inline ;
-}
-
 .footer{
-    background-color: #F5DA98;
+    background-color: #495D63;
     height : 100px;
     display: flex;
 }
 .footer-text {
     margin:auto;
-    color : #DE9B7E ;
+    color : #98B6B1 ;
     font-size : 90% ;
 } 
-/* 
-.product-list {
-    display: none;
-}
-.display-menu{
-    display: block;
-    color:aqua;
-}
-.navbar {
-    display: none;
-}
-
-.navbar-2{
-    display: block;
-} */
